modified:   views/layouts/main.php 	modified:   views/site/index.php 	modified:   web/css/site.css 	modified:   web/css/test.css

--- a/web/css/test.css
+++ b/web/css/test.css
@@ -15,22 +15,20 @@ p{
     font-family: 'Cormorant Garamond', serif;
 }
 
-.container > .navbar-header, .container-fluid > .navbar-header, .container > .navbar-collapse, .container-fluid > .navbar-collapse{
-    height:90px;
-}
+
 .navbar-default{
-    background: transparent;
+    background:#dddfdf;
     border: none;
 }
 .navbar .navbar-toggle {
-    margin:25px;
+    
     background-color: #47b8e0 !important; 
 }
 .navbar .navbar-toggle .icon-bar{
     background: #fff !important;
 }
 .navbar .navbar-collapse, .navbar .navbar-form{
-    height: 340px;
+    
     background:transparent;
     padding-bottom: 10px;
     border-bottom:1px solid #ccc; 
